# nix-cabal-example-project

./: .gitignore  README.md  default.nix  nixpkgs.nix  shell.nix
package1/: ChangeLog.md  package1.cabal
package1/src/Package1/: Lib.hs
package2/: ChangeLog.md  LICENSE  package2.cabal
package2/app/: Main.hs
package2/src/Package2/: Lib.hs
