cabal-version: 1.12

name:           package2
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cdepillabout/nix-cabal-example-project#readme>
homepage:       https://github.com/cdepillabout/nix-cabal-example-project#readme
bug-reports:    https://github.com/cdepillabout/nix-cabal-example-project/issues
author:         Example Author
maintainer:     me@example.com
copyright:      Copyright (c) 2019 The Author
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/nix-cabal-example-project

library
  exposed-modules:  Package2.Lib
  other-modules:    Paths_package2
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
                  , aeson
                  , package1
  default-language: Haskell2010

executable example-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >=4.7 && <5
                  , package2
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >=4.7 && <5
                  , package2
                  , tasty
  default-language: Haskell2010
